Fix search box on tablets.

--- a/themes/cakephp/static/default.css
+++ b/themes/cakephp/static/default.css
@@ -65,7 +65,7 @@
 	clear: right;
 }
 .search-input {
-	width: 82%;
+	width: 80%;
 	font-size: 16px;
 	padding: 5px 0;
 	margin:  0 3% 0 0;
